--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -6,6 +6,9 @@ spring:
     url: jdbc:mysql://localhost:3306/travel_db?allowpublickeyretrieval=true&usessl=false&serverTimezone=UTC
     username: eddi
     password: eddi@123
+    #url: jdbc:mysql://localhost:3306/travelers_db?allowpublickeyretrieval=true&usessl=false&serverTimezone=UTC
+    #username: teamproject
+    #password: teamproject
     driver-class-name: com.mysql.cj.jdbc.Driver
     dialect: org.hibernate.dialect.MySQL8Dialect
 
