--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -21,3 +21,22 @@ spring:
     multipart:
       max-file-size: 20MB
       max-request-size: 20MB
+
+  security:
+    oauth2:
+      client:
+        registration:
+          naver:
+            client-id: VvlX27kn9fylPAot1wRs
+            client-secret: TjJfSZptsw
+            redirect-uri: http://localhost:7777/login/oauth2/code/naver
+            authorization-grant-type: authorization_code
+            scope: email
+            client-name: Naver
+
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
