--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -30,11 +30,11 @@ spring:
       client:
         registration:
           naver:
-            client-id: VvlX27kn9fylPAot1wRs
-            client-secret: TjJfSZptsw
+            client-id: wObiYFOd0inFfRqiThxw
+            client-secret: wObiYFOd0inFfRqiThxw
             redirect-uri: http://localhost:7777/login/oauth2/code/naver
             authorization-grant-type: authorization_code
-            scope: email
+            scope: name, email, mobile
             client-name: Naver
 
         provider:
@@ -43,3 +43,8 @@ spring:
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
+
+logging:
+  level:
+    root: info
+    com.psc.sample: debug
