--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -37,20 +37,18 @@ spring:
 
           naver:
             client-id: wObiYFOd0inFfRqiThxw
-            client-secret: wObiYFOd0inFfRqiThxw
+            client-secret: E8C3kDFS5A
             redirect-uri: http://localhost:7777/login/oauth2/code/naver
             authorization-grant-type: authorization_code
-            scope: name, email, mobile
+            scope:  mobile, name, email
             client-name: Naver
-
-
 
         provider:
           naver:
             authorization-uri: https://nid.naver.com/oauth2.0/authorize
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
-            user-name-attribute: response
+            user-name-attribute: response #회원정보를 json으로 받는데 reponse라는 키값으로 네이버가 리턴해줌
 
 logging:
   level:
