--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "serve": "^13.0.2",
     "vue": "^2.6.14",
     "vue-coverflow": "^2.2.0",
     "vue-router": "^3.5.1",
