--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "moment": "^2.29.3",
     "serve": "^13.0.2",
     "vue": "^2.6.14",
     "vue-coverflow": "^2.2.0",
@@ -27,6 +28,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "material-design-icons": "^3.0.1",
