--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "swiper": "^5.3.7",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-cli-plugin-vuetify": "~2.4.8",
     "vue-cookies": "^1.8.1",
     "vue-template-compiler": "^2.6.14",
