--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
     show-sql: true
     generate-ddl: true
     hibernate:
-      ddl-auto: 'create-drop'
+      ddl-auto: 'create'
 
   servlet:
     multipart:
